fixing overflow

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ html {
     max-width: 120rem;
     border: 1px solid red;
     margin: 0 auto;
-    padding: 0 1.2rem;
 }
 
 body {
@@ -86,7 +85,7 @@ nav {
 /*------------------------------------------ BELOW 544px (Phones)------------*/
 /*550px / 16px = 34em*/
 @media (max-width: 34em) {
-
+    
     main {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -94,7 +93,12 @@ nav {
     }
     .col_one,
     .col_two,
-    .col_three,
+    .col_three {
+        padding: 0 1.2rem;
+    }
+    /* .col_one,
+    .col_two,
+    .col_three, */
     .col_four {
         margin: auto;
     }
